# 2DincompressFuild

./: .gitignore  CMakeLists.txt  README.md  input.json  inputReview.csv
include/: generate2Dmesh.h  input.h  main.h
src/: generate2Dmesh.cpp  input.cpp  main.cpp
